--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,13 @@
-body, html {
+html, body {
+  position: relative;
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
+}
+
+body {
+  color: #333;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
